# context-os

./: .claudeignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LAUNCH.md  LICENSE  README.md  STATUS.md  package.json  setup.sh
.claude-plugin/: marketplace.json  plugin.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  technique_submission.yml
.github/workflows/: ci.yml  release.yml
Formula/: context-os.rb
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/dashboard/: index.html  package.json  vite.config.ts
apps/dashboard/src/: App.tsx  index.css
apps/plugin-claude/: README.md  package.json
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/prompt-linter/: Cargo.toml
crates/prompt-linter/src/: lib.rs
crates/proxy-core/: Cargo.toml
crates/proxy-core/src/: lib.rs
crates/reducer-engine/: Cargo.toml
crates/reducer-engine/src/: lib.rs
crates/reducer-engine/src/reducers/: build_log.rs  config.rs  json.rs  lint_output.rs  mod.rs  stack_trace.rs  test_log.rs
crates/repo-memory/: Cargo.toml
crates/repo-memory/src/: lib.rs
crates/session-memory/: Cargo.toml
crates/session-memory/src/: lib.rs
crates/telemetry/: Cargo.toml
crates/telemetry/sql/: schema.sql
crates/telemetry/src/: lib.rs
crates/token-estimator/: Cargo.toml
crates/token-estimator/src/: lib.rs
docs/: DEMO.md  FOR-CLAUDE-CODE-TEAM.md  METHODOLOGY.md  PITCH.md  PROPOSAL.md  REVIEW-CHECKLIST.md  SECURITY.md  architecture.md  benchmark-plan.md  claude-code-integration.md  devto-article.md  limitations.md  product-spec.md  reducer-specs.md  safety-model.md  user-guide.md
docs/distribution/: DEMO-SCRIPT.md  DEVTO-ARTICLE.md  DIRECT-OUTREACH.md  GH-FEATURE-REQUEST.md  LAUNCH-CHECKLIST.md  LINKEDIN.md  README.md  REDDIT.md  RESEARCH.md  SHOW-HN.md  TWEETS.md
examples/: README.md
examples/sample-configs/: context-os.project.json  service.toml
examples/sample-logs/: stack-trace-node.txt  test-log-jest.txt
examples/sample-repos/: README.md
examples/sample-repos/mini-next/: package.json
examples/sample-repos/mini-next/app/: page.tsx
examples/sample-repos/mini-next/src/components/: NavBar.tsx
examples/sample-repos/mini-next/src/lib/: api.ts
examples/sample-sessions/: README.md  state.json  update.json
examples/stacks/django/: README.md  requirements.txt
examples/stacks/nextjs/: README.md  package.json
examples/stacks/nextjs/app/: page.tsx
examples/stacks/rust/: Cargo.toml  README.md
hooks/: hooks.json
hooks/python/: auto_context.py  build_repo_graph.py  dedup_guard.py  file_size_guard.py  loop_guard.py  prewarm.py  session_profile.py
python/: __init__.py  pyproject.toml
python/evals/: __init__.py  autocontext_prompts.json  dogfood_prompts.json
python/evals/autocontext_fixture/tests/: test_crypto.py  test_login.py  test_migrations.py  test_rate_limit.py  test_session.py
python/evals/autocontext_fixture_js/tests/: login.test.ts
python/evals/autocontext_fixture_rust/src/: lib.rs
python/evals/datasets/: README.md  compaction_survival_cases.json  safe_mode_cases.json
python/evals/multi_repo_prompts/: axios.json  requests.json  ripgrep.json
python/evals/reports/: README.md  autocontext-ablation.md  autocontext-eval.md  baseline-comparison.md  benchmark-fixture-20260415.json  compaction-survival-report.json  compaction-survival-report.md  dogfood-eval.md  latency-bench-raw.json  latency-bench.md  live-session-bench-raw.json  live-session-bench-stats.md  live-session-bench.md  multi-repo-eval.md  robustness.md  safe-mode-report.json  safe-mode-report.md  session-replay.md
python/evals/runners/: _ablation_child.py  autocontext_ablation.py  autocontext_eval.py  baseline_comparison.py  compaction_survival_runner.py  dogfood_eval.py  git_commit_eval.py  latency_bench.py  live_bench_stats.py  live_session_bench.py  multi_repo_eval.py  ranker_floor.py  robustness_test.py  safe_mode_runner.py  session_replay.py  smoke_runner.py
python/evals/scorers/: README.md  __init__.py  compaction_survival.py  safe_mode.py
schemas/: config.schema.json
scripts/: benchmark.sh  demo.tape
skills/: doctor.md  init.md  stats.md
tests/fixtures/: build-log-cargo.txt  large-array-response.json  large-response.json  lint-output-clippy.txt  long-prompt.txt  service-config.toml  stack-trace-node.txt  test-log-jest.txt
(+45 files in other folders)
