[workspace]
members = [
  "apps/cli",
  "crates/config",
  "crates/prompt-linter",
  "crates/proxy-core",
  "crates/reducer-engine",
  "crates/repo-memory",
  "crates/session-memory",
  "crates/telemetry",
  "crates/token-estimator",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://example.invalid/context-os"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3.15"
thiserror = "2.0"
toml = "0.8"
