[package]
name = "context-os"
description = "Local-first context optimizer for Claude Code. Reduces token consumption by 26-42% with typed reducers, session continuity, and repo-aware CLAUDE.md generation."
keywords = ["claude", "context", "llm", "token", "optimization"]
categories = ["command-line-utilities", "development-tools"]
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
config = { path = "../../crates/config" }
prompt-linter = { path = "../../crates/prompt-linter" }
proxy-core = { path = "../../crates/proxy-core" }
reducer-engine = { path = "../../crates/reducer-engine" }
repo-memory = { path = "../../crates/repo-memory" }
session-memory = { path = "../../crates/session-memory" }
telemetry = { path = "../../crates/telemetry" }
token-estimator = { path = "../../crates/token-estimator" }
