[package]
name = "context-os"
description = "Local-first Claude Code resilience layer. Preserves decisions, failures, and modified files through compaction with typed reducers and structured session state."
keywords = ["claude", "compaction", "resilience", "hooks", "session"]
categories = ["command-line-utilities", "development-tools"]
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
config = { path = "../../crates/config" }
prompt-linter = { path = "../../crates/prompt-linter" }
proxy-core = { path = "../../crates/proxy-core" }
reducer-engine = { path = "../../crates/reducer-engine" }
repo-memory = { path = "../../crates/repo-memory" }
session-memory = { path = "../../crates/session-memory" }
telemetry = { path = "../../crates/telemetry" }
token-estimator = { path = "../../crates/token-estimator" }
