[package]
name = "reducer-engine"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
toml.workspace = true
token-estimator = { path = "../token-estimator" }
